clusters/easy-platform/apps/smart-shop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-shop
  labels:
    app.kubernetes.io/part-of: smart-shop
    pod-security.kubernetes.io/enforce: restricted
