clusters/easy-platform/apps/smart-shop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-shop-frontend
  namespace: smart-shop
spec:
  ingressClassName: traefik
  rules:
    - host: shop.lazycampus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-shop-frontend
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-shop-backend
  namespace: smart-shop
spec:
  ingressClassName: traefik
  rules:
    - host: shop-api.lazycampus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-shop-backend
                port:
                  name: http
